# pipeline_de_dados_dagster_dbt_duckDB_scrapy

./: .gitignore  README.md  requirements.txt
doc/: codigo.doc  doc.doc  (+1 more)
projeto_dados/: README.md  noticias.duckdb  pyproject.toml  setup.cfg  setup.py
projeto_dados/crawler_noticia/economia/: scrapy.cfg
projeto_dados/crawler_noticia/governo/: scrapy.cfg
projeto_dados/db_mongo/: conexao_mongo.py
projeto_dados/dbt_project/: dbt_project.yml
projeto_dados/projeto_dados/: __init__.py  assets.py  definitions.py  repository.py
projeto_dados/projeto_dados/resultados/: economia_LogisticRegression_confusion_matrix.csv  economia_RandomForest_confusion_matrix.csv  economia_SVM_confusion_matrix.csv  economia_metrics.csv  economia_processed_estatisticas.csv  economia_processed_relatorio_completo.csv  economia_relatorio.txt  economia_sentimento_summary.csv  economia_transformed_sentimento_summary.csv  governo_processed_estatisticas.csv  governo_processed_relatorio_completo.csv  governo_relatorio.txt  governo_sentimento_summary.csv  governo_transformed_sentimento_summary.csv
projeto_dados/tmp2hfgv9zr/history/: runs.db
projeto_dados/tmp2hfgv9zr/schedules/: schedules.db
projeto_dados/tmp6h1ok6oy/history/: runs.db
projeto_dados/tmp6h1ok6oy/schedules/: schedules.db
projeto_dados/tmp6h1ok6oy/storage/: tratar_dados_economia  tratar_dados_governo
projeto_dados/tmp8ftsjkdd/history/: runs.db
projeto_dados/tmp8ftsjkdd/schedules/: schedules.db
projeto_dados/tmp8ftsjkdd/storage/: tratar_dados_economia  tratar_dados_governo
projeto_dados/tmpd2h7v31q/history/: runs.db
(+64 files in other folders)
